@startuml
'https://plantuml.com/class-diagram
class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - {static} instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

class Game{}

HeroAircraft <-- Game
HeroAircraft "instance"<--"getInstance()" HeroAircraft



@enduml